--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,8 +104,8 @@
 
     <string name="pref_cat_general">General</string>
 
-    <string name="pref_title_logged">Logout</string>
-    <string name="pref_description_logged">Click to clear entered BPK login and password (logout)</string>
+    <string name="pref_title_logout">Logout</string>
+    <string name="pref_description_logout">Click to clear entered BPK login and password (logout)</string>
     <string name="pref_title_account">Account: %1$s</string>
 
     <string name="pref_title_autoprolong">Auto prolong</string>
