--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_activity_rules">Regulamin</string>
     <string name="title_activity_main">BiblosPK</string>
     <string name="title_activity_main_with_cash">Należności: %1$.02fzł</string>
+    <string name="title_activity_expired">Ważność konta wygasła!</string>
     <string name="title_activity_details">Szczegóły</string>
 
     <string name="title_cut_library">Biblioteka PK</string>
