--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_activity_rules">Rules</string>
     <string name="title_activity_main">BiblosPK</string>
     <string name="title_activity_main_with_cash">Debts: %1$.02f PLN</string>
+    <string name="title_activity_expired">Account expired!</string>
     <string name="title_activity_details">Details</string>
 
     <string name="title_cut_library">CUT Library</string>
